--- a/HousePriceReg.ipynb
+++ b/HousePriceReg.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 家の値段を予測する\n",
+    "\n",
+    "- データセットはKaggleの[チュートリアルコンペ](https://www.kaggle.com/c/house-prices-advanced-regression-techniques)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -696,6 +705,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "最小値がゼロ以上"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 出力のヒストグラムをみる\n",
+    "回帰分析は、出力が正規分布に従う条件がある  \n",
+    "歪度が正の場合は対数変換が有効的"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
@@ -727,18 +752,11 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 出力のヒストグラムをみる\n",
-    "回帰分析は、出力が正規分布に従う条件がある  \n",
-    "歪度が正の場合は対数変換が有効的"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "prices = pd.DataFrame({'price': train['SalePrice'], 'log(1 + price)': np.log1p(train['SalePrice'])})"
@@ -827,7 +845,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "train['SalePrice'] = np.log1p(train['SalePrice'])\n",
@@ -1138,7 +1158,9 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.linear_model import Ridge, RidgeCV, ElasticNet, LassoCV, LassoLarsCV, Lasso\n",
@@ -1163,7 +1185,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "alphas = [0.05, 0.1, 0.3, 1, 3, 5, 10, 15, 30, 50, 75]\n",
@@ -1281,7 +1305,9 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "solution_ridge = pd.DataFrame({'id': test['Id'], 'SalePrice': ridge_preds})\n",
